增加装饰器图标

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -114,3 +114,7 @@ BehaviorTreeDecoratorView {
     color: rgb(255, 255, 255);
     -unity-font-style: bold;
 }
+
+.disable_DecoratorIcon #header > #icon{
+    display: none;
+}
