--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -58,6 +58,10 @@ BehaviorTreeView .debug {
     display: none;
 }
 
+.disable_MiniMap MiniMap{
+    display: none;
+}
+
 .customTip {
     min-height: 0;
 }
