--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -54,11 +54,11 @@ BehaviorTreeView .debug {
     max-width: 280px;
 }
 
-.disable_FloatingTip .floatingTip{
+.disable_FloatingTip .floatingTip {
     display: none;
 }
 
-.disable_MiniMap MiniMap{
+.disable_MiniMap MiniMap {
     display: none;
 }
 
@@ -81,13 +81,13 @@ BehaviorTreeView .debug {
 }
 
 BehaviorTreeView .node.startNode {
-    border-left-width: 6px;
-    border-right-width: 6px;
-    border-top-width: 6px;
-    border-bottom-width: 6px;
-    border-top-left-radius: 0;
+    border-left-width: 4px;
+    border-right-width: 4px;
+    border-top-width: 4px;
+    border-bottom-width: 4px;
+    border-top-left-radius: 4px;
     border-bottom-left-radius: 20px;
-    border-top-right-radius: 0;
+    border-top-right-radius: 4px;
     border-bottom-right-radius: 20px;
     border-left-color: rgba(245, 144, 20, 0.76);
     border-right-color: rgba(245, 144, 20, 0.76);
