--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
@@ -1,3 +1,21 @@
 .behaviorTreeEditor .uiBuilderDebugNode {
-	display: none;
+    display: none;
+}
+
+.Running.edge {
+    --selected-edge-color: rgba(44, 13, 219, 0.84);
+    --ghost-edge-color: rgba(17, 226, 97, 0.75);
+    --edge-color: rgba(17, 226, 97, 0.75);
+    --edge-width: 4;
+    color: rgb(228, 9, 173);
+}
+
+.Running.node.behaviorTreeNode > #node-border {
+    background-color: rgb(215, 215, 6);
+}
+
+.Running.node.behaviorTreeNode #header {
+}
+
+.Running.node.behaviorTreeNode #header #title {
 }
