--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
@@ -3,11 +3,12 @@
 }
 
 .Running.edge {
-    --selected-edge-color: rgba(44, 13, 219, 0.84);
-    --ghost-edge-color: rgba(17, 226, 97, 0.75);
-    --edge-color: rgba(17, 226, 97, 0.75);
     --edge-width: 4;
-    color: rgb(228, 9, 173);
+    --edge-colorMode: inputColor;
+}
+
+.Running.node #input .port {
+    --port-color: rgb(215, 215, 6);
 }
 
 .Running.node.behaviorTreeNode > #node-border {
