Edge设置一个colorMode参数，允许Edge不通过根据Port计算颜色，独立设置一个颜色

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
@@ -3,11 +3,12 @@
 }
 
 .Running.edge {
-    --edge-width: 4;
-    --edge-colorMode: inputColor;
+    --edge-color: rgb(215, 215, 6);
+    --edge-width: 3;
+    --edge-colorMode: defaultColor;
 }
 
-.Running.node #input .port {
+.Running.node.behaviorTreeNode #input .port {
     --port-color: rgb(215, 215, 6);
 }
 
