--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -210,3 +210,9 @@
 .disable_NodeIcon #body #header > #icon{
     display: none;
 }
+
+.edge .flowPoint {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(255, 0, 0);
+}
