--- a/UnityAI/Packages/com.megumin.binding/Editor/Resources/RefVar.uss
+++ b/UnityAI/Packages/com.megumin.binding/Editor/Resources/RefVar.uss
@@ -1,4 +1,5 @@
-.refVar .refName {
+.refVar #unity-property-field-Value\.refName {
     display: none;
-    background-color: rgba(250, 0, 0, 255);
+    background-color: rgb(250, 0, 0);
+    height: 30px;
 }
