--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -62,6 +62,10 @@ BehaviorTreeView .debug {
     display: none;
 }
 
+.disable_Blackboard BehaviorTreeBlackboardView {
+    display: none;
+}
+
 .customTip {
     min-height: 0;
 }
