--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
@@ -17,13 +17,11 @@
         <uie:ToolbarButton text="ShowTree" display-tooltip-when-elided="true" name="showTreeWapper" class="topbar-button" />
         <uie:ToolbarSpacer />
         <uie:ToolbarButton text="ReloadView" display-tooltip-when-elided="true" name="reloadView" class="topbar-button" />
-        <uie:ToolbarSpacer />
-        <uie:ToolbarButton text="Test1" display-tooltip-when-elided="true" name="test1" class="topbar-button" />
-        <uie:ToolbarButton text="Test2" display-tooltip-when-elided="true" name="test2" class="topbar-button" />
-        <uie:ToolbarButton text="Test3" display-tooltip-when-elided="true" name="test3" class="topbar-button" />
         <uie:ToolbarSpacer style="flex-grow: 1;" />
-        <uie:ToolbarToggle focusable="false" label="FloatingTip" name="showFloatingTip" class="topbar-button" style="display: none; visibility: hidden;" />
+        <uie:ToolbarToggle label="Blackboard" name="blackboard" class="topbar-button" />
         <uie:ToolbarSpacer />
+        <uie:ToolbarToggle label="Graph Inspector" name="graphInspector" class="topbar-button" style="display: none;" />
+        <uie:ToolbarSpacer style="display: none;" />
         <uie:ToolbarButton text="Help" display-tooltip-when-elided="true" name="help" class="topbar-button" />
     </uie:Toolbar>
     <Megumin.GameFramework.AI.BehaviorTree.Editor.BehaviorTreeView name="behaviorTreeView" class="behaviorTreeView" />
