--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
@@ -1,5 +1,23 @@
-.behaviorTreeEditor .uiBuilderDebugNode {
+﻿.behaviorTreeEditor .uiBuilderDebugNode {
     display: none;
+}
+
+.failed.node.behaviorTreeNode > #node-border {
+    background-color: rgba(89, 45, 45, 0.75);
+}
+
+.failed.edge #注释{
+    --edge-color: rgb(146, 133, 133);
+    --edge-colorMode: defaultColor;
+}
+
+.succeeded.node.behaviorTreeNode > #node-border {
+    background-color: rgba(52, 89, 45, 0.84);
+}
+
+.succeeded.edge #注释{
+    --edge-color: rgb(133, 146, 133);
+    --edge-colorMode: defaultColor;
 }
 
 .running.edge {
