--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -33,6 +33,19 @@
     border-bottom-right-radius: 2px;
 }
 
+.runningState {
+    background-color: rgba(128, 128, 128, 0);
+    width: 16px;
+    height: 16px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    position: absolute;
+    right: 1px;
+    top: 1px;
+}
+
 .portContainer {
     align-items: center;
     flex-direction: row;
