--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -23,6 +23,7 @@
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
+                <ui:Label text="-1" display-tooltip-when-elided="true" name="nodeIndex" class="nodeIndex" />
             </ui:VisualElement>
             <ui:VisualElement name="contents">
                 <ui:Label display-tooltip-when-elided="true" name="description" class="contentLabel" />
