--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -86,9 +86,12 @@ BehaviorTreeDecoratorView {
 
 .abortType {
     display: none;
-    width: 16px;
-    height: 16px;
-    margin-left: 2px;
+    position: absolute;
+    top: -3px;
+    right: -8px;
+    width: 14px;
+    height: 14px;
+    margin-left: 0;
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -101,26 +104,30 @@ BehaviorTreeDecoratorView {
     border-top-width: 0;
     border-bottom-width: 0;
     background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(204, 194, 194, 0.95);
     border-left-color: rgba(0, 0, 0, 0);
     border-right-color: rgba(0, 0, 0, 0);
     border-top-color: rgba(0, 0, 0, 0);
     border-bottom-color: rgba(0, 0, 0, 0);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .abortType.abortTypeSelf {
     display: flex;
-    background-image: resource("animatorstatetransition icon");
+    background-image: resource('animatorstatetransition icon');
 }
 
 .abortType.abortTypeLowerPriority {
     display: flex;
-    background-image: resource("areaeffector2d icon");
+    background-image: resource('areaeffector2d icon');
 }
 
 .abortType.abortTypeSelf.abortTypeLowerPriority {
     display: flex;
-    background-image: resource("compositecollider2d icon");
+    background-image: resource('compositecollider2d icon');
 }
 
 .marker {
