--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -113,6 +113,7 @@ BehaviorTreeDecoratorView {
     border-bottom-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    -unity-background-image-tint-color: rgb(191, 48, 48);
 }
 
 .abortType.abortTypeSelf {
@@ -122,12 +123,12 @@ BehaviorTreeDecoratorView {
 
 .abortType.abortTypeLowerPriority {
     display: flex;
-    background-image: resource('areaeffector2d icon');
+    background-image: resource('d_networkanimator icon');
 }
 
 .abortType.abortTypeSelf.abortTypeLowerPriority {
     display: flex;
-    background-image: resource('compositecollider2d icon');
+    background-image: resource('lensflare gizmo');
 }
 
 .marker {
