--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -99,7 +99,7 @@ BehaviorTreeView .node.startNode {
     border-bottom-color: rgba(245, 144, 20, 0.76);
 }
 
-BehaviorTreeView .node.startNode #body #header {
+BehaviorTreeView .node.startNode #center #header {
     background-color: rgba(245, 144, 20, 0.76);
 }
 
