--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -6,7 +6,7 @@
     background-color: rgba(0, 0, 0, 0.55);
 }
 
-.node #body {
+.node #center {
     border-left-width: 1px;
     border-right-width: 1px;
     border-top-width: 1px;
@@ -179,20 +179,20 @@
     position: absolute;
 }
 
-.ActionTaskNode #body #header {
+.ActionTaskNode #center #header {
     background-color: rgb(96, 45, 160);
 }
 
-.BTParentNode #body #header {
+.BTParentNode #center #header {
     background-color: rgb(64, 64, 64);
 }
 
-#body #header {
+#center #header {
     flex-direction: row;
     align-items: center;
 }
 
-#body #header > #icon {
+#center #header > #icon {
     display: flex;
     width: 20px;
     height: 20px;
@@ -216,12 +216,12 @@
     background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
 }
 
-#body #header > #title {
+#center #header > #title {
     flex-grow: 1;
     background-color: rgba(0, 0, 0, 0);
 }
 
-#body #header .nodeIndex {
+#center #header .nodeIndex {
     width: 14px;
     height: 14px;
     border-top-left-radius: 10px;
@@ -251,7 +251,7 @@
     margin-bottom: 0;
 }
 
-#body #contents .contentLabel {
+#center #contents .contentLabel {
     color: rgb(137, 137, 137);
     font-size: 12px;
     background-color: rgb(43, 43, 43);
@@ -260,18 +260,18 @@
     min-width: 0;
 }
 
-#body #contents #description {
+#center #contents #description {
     display: none;
 }
 
-#body #contents #guid {
+#center #contents #guid {
 }
 
-.disable_NodeIcon #body #header > #icon {
+.disable_NodeIcon #center #header > #icon {
     display: none;
 }
 
-.disable_NodeIndex #body #header .nodeIndex {
+.disable_NodeIndex #center #header .nodeIndex {
     display: none;
 }
 
