--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -12,7 +12,7 @@
         <ui:VisualElement name="decorator" class="decoratorContainer">
             <ui:ListView class="decoratorList" />
         </ui:VisualElement>
-        <ui:VisualElement name="body">
+        <ui:VisualElement name="center">
             <ui:VisualElement name="header">
                 <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
                 <ui:VisualElement name="title">
