--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -179,20 +179,20 @@
     position: absolute;
 }
 
-.ActionTaskNode #center #header {
+.ActionTaskNode #center #body {
     background-color: rgb(96, 45, 160);
 }
 
-.BTParentNode #center #header {
+.BTParentNode #center #body {
     background-color: rgb(64, 64, 64);
 }
 
-#center #header {
+#center #body {
     flex-direction: row;
     align-items: center;
 }
 
-#center #header > #icon {
+#center #body > #icon {
     display: flex;
     width: 20px;
     height: 20px;
@@ -216,12 +216,12 @@
     background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
 }
 
-#center #header > #title {
+#center #body > #title {
     flex-grow: 1;
     background-color: rgba(0, 0, 0, 0);
 }
 
-#center #header .nodeIndex {
+#center #body .nodeIndex {
     width: 14px;
     height: 14px;
     border-top-left-radius: 10px;
@@ -267,11 +267,11 @@
 #center #contents #guid {
 }
 
-.disable_NodeIcon #center #header > #icon {
+.disable_NodeIcon #center #body > #icon {
     display: none;
 }
 
-.disable_NodeIndex #center #header .nodeIndex {
+.disable_NodeIndex #center #body .nodeIndex {
     display: none;
 }
 
