--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -13,7 +13,7 @@
             <ui:ListView class="decoratorList" />
         </ui:VisualElement>
         <ui:VisualElement name="center">
-            <ui:VisualElement name="header">
+            <ui:VisualElement name="body">
                 <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
                 <ui:VisualElement name="title">
                     <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
