--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -187,12 +187,12 @@
     background-color: rgb(64, 64, 64);
 }
 
-#center #body {
+#center #titleBar {
     flex-direction: row;
     align-items: center;
 }
 
-#center #body > #icon {
+#center #titleBar > #icon {
     display: flex;
     width: 20px;
     height: 20px;
@@ -216,7 +216,7 @@
     background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
 }
 
-#center #body > #title {
+#center #titleBar > #title {
     flex-grow: 1;
     background-color: rgba(0, 0, 0, 0);
 }
@@ -267,7 +267,7 @@
 #center #contents #guid {
 }
 
-.disable_NodeIcon #center #body > #icon {
+.disable_NodeIcon #center #titleBar > #icon {
     display: none;
 }
 
