--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -14,12 +14,14 @@
         </ui:VisualElement>
         <ui:VisualElement name="center">
             <ui:VisualElement name="body">
-                <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
-                <ui:VisualElement name="title">
-                    <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
-                    <ui:VisualElement name="title-button-container">
-                        <ui:VisualElement name="collapse-button">
-                            <ui:VisualElement name="icon" />
+                <ui:VisualElement name="titleBar">
+                    <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
+                    <ui:VisualElement name="title">
+                        <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
+                        <ui:VisualElement name="title-button-container">
+                            <ui:VisualElement name="collapse-button">
+                                <ui:VisualElement name="icon" />
+                            </ui:VisualElement>
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
