--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -25,6 +25,9 @@
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
+                <ui:VisualElement name="detailContainer" class="detailContainer">
+                    <ui:Label text="Wait: waitTime. Left: 0.5" display-tooltip-when-elided="true" name="detail" class="detail" />
+                </ui:VisualElement>
                 <ui:Label text="-1" display-tooltip-when-elided="true" name="nodeIndex" class="nodeIndex" />
             </ui:VisualElement>
             <ui:VisualElement name="contents">
