--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -322,3 +322,7 @@
 .disable_NodeDetail #center #body .detailContainer {
     display: none;
 }
+
+.zoomOut #center #body .detailContainer {
+    display: none;
+}
