--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -162,6 +162,32 @@ BehaviorTreeDecoratorView {
     -unity-font-style: bold;
 }
 
-.disable_DecoratorIcon #header > #icon {
+.disable_DecoratorIcon #titleBar > #icon {
     display: none;
+}
+
+.invertMarker {
+    display: none;
+    width: 14px;
+    height: 14px;
+    margin-left: 4px;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    -unity-text-align: middle-center;
+    background-color: rgb(166, 116, 0);
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    -unity-font-style: bold;
+    font-size: 14px;
+}
+
+.invertMarker.isInvert {
+    display: flex;
 }
