--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -104,7 +104,7 @@ BehaviorTreeDecoratorView {
     border-top-width: 0;
     border-bottom-width: 0;
     background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
-    background-color: rgba(204, 194, 194, 0.95);
+    background-color: rgb(178, 125, 0);
     border-left-color: rgba(0, 0, 0, 0);
     border-right-color: rgba(0, 0, 0, 0);
     border-top-color: rgba(0, 0, 0, 0);
@@ -113,22 +113,23 @@ BehaviorTreeDecoratorView {
     border-bottom-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    -unity-background-image-tint-color: rgb(191, 48, 48);
 }
 
 .abortType.abortTypeSelf {
     display: flex;
-    background-image: resource('animatorstatetransition icon');
+    background-image: resource('raycastcollider icon');
+    rotate: 90deg;
 }
 
 .abortType.abortTypeLowerPriority {
     display: flex;
-    background-image: resource('d_networkanimator icon');
+    background-image: resource('raycastcollider icon');
 }
 
 .abortType.abortTypeSelf.abortTypeLowerPriority {
     display: flex;
-    background-image: resource('lensflare gizmo');
+    background-image: resource('animatorstate icon');
+    rotate: -90deg;
 }
 
 .marker {
