增加角标容器

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -360,3 +360,10 @@
 #body .dynamicMarker.isDynamic {
     display: flex;
 }
+
+.badgeContainer {
+    flex-direction: row-reverse;
+    position: absolute;
+    top: -2px;
+    right: -5px;
+}
