--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -29,6 +29,10 @@
                 <ui:VisualElement name="detailContainer" class="detailContainer">
                     <ui:Label text="Wait: waitTime. Left: 0.5" display-tooltip-when-elided="true" name="detail" class="detail" />
                 </ui:VisualElement>
+                <ui:VisualElement name="toprightBadgeContainer" picking-mode="Ignore" class="badgeContainer top right">
+                    <ui:VisualElement name="testBadge" style="background-color: rgb(217, 23, 23); width: 14px; height: 14px;" />
+                    <ui:VisualElement name="testBadge" style="background-color: rgb(23, 217, 73); width: 14px; height: 14px;" />
+                </ui:VisualElement>
                 <ui:Label text="-1" display-tooltip-when-elided="true" name="nodeIndex" class="nodeIndex" />
             </ui:VisualElement>
             <ui:VisualElement name="contents">
