--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -358,9 +358,37 @@
     display: flex;
 }
 
-.badgeContainer {
+#center #body .badgeContainer {
     flex-direction: row-reverse;
     position: absolute;
     top: -2px;
     right: -5px;
+}
+
+#center #body .badgeContainer .nodeBadge {
+    width: 14px;
+    height: 14px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.nodeAbortType {
+    display: none;
+}
+
+.abortType {
 }
