装饰器增加角标容器。条件终止图标移动到容器

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -86,9 +86,6 @@ BehaviorTreeDecoratorView {
 
 .abortType {
     display: none;
-    position: absolute;
-    top: -3px;
-    right: -8px;
     width: 14px;
     height: 14px;
     margin-left: 0;
@@ -191,4 +188,11 @@ BehaviorTreeDecoratorView {
 
 .invertMarker.isInvert {
     display: flex;
+}
+
+.decoratorCenter > .badgeContainer {
+    flex-direction: row-reverse;
+    position: absolute;
+    top: -3px;
+    right: -8px;
 }
