装饰器容器动态高度

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -10,7 +10,7 @@
         </ui:VisualElement>
         <ui:VisualElement name="divider" class="vertical" />
         <ui:VisualElement name="decorator" class="decoratorContainer">
-            <ui:ListView class="decoratorList" />
+            <ui:ListView virtualization-method="DynamicHeight" reorder-mode="Animated" reorderable="true" class="decoratorList" />
         </ui:VisualElement>
         <ui:VisualElement name="center">
             <ui:VisualElement name="body">
