--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uxml
@@ -1,10 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss?fileID=7433441132597879392&amp;guid=cb9b1b6b6642f954f8d6b3ea1d580658&amp;type=3#BehaviorTreeDecoratorView" />
     <ui:VisualElement name="contentContainer" class="border decoratorCenter" style="flex-direction: row;">
-        <ui:VisualElement name="titleBar" style="flex-direction: row; flex-grow: 1; align-items: center;">
-            <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
-            <ui:Label text="I" display-tooltip-when-elided="true" name="invertMarker" tooltip="Condition result is invert." class="invertMarker" />
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="title-label" class="title" />
+        <ui:VisualElement name="decoratorBody" style="flex-grow: 1;">
+            <ui:VisualElement name="titleBar" style="flex-direction: row; flex-grow: 1; align-items: center;">
+                <ui:Button display-tooltip-when-elided="true" name="icon" class="treeElementIcon" />
+                <ui:Label text="I" display-tooltip-when-elided="true" name="invertMarker" tooltip="Condition result is invert." class="invertMarker" />
+                <ui:Label text="Label" display-tooltip-when-elided="true" name="title-label" class="title" />
+            </ui:VisualElement>
+            <ui:VisualElement name="decoratorDetailContainer" style="background-color: rgb(159, 61, 61);">
+                <ui:Label text="This is detail" display-tooltip-when-elided="true" name="decoratorDetail" style="width: 80px; flex-grow: 1; flex-shrink: 1; font-size: 10px; white-space: normal;" />
+            </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="markerContainer" class="markerContainer">
             <ui:Label text="C↓" display-tooltip-when-elided="true" name="cMarker" class="marker markerLabel cMarker" />
