--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -103,10 +103,10 @@
     border-top-width: 0;
     border-bottom-width: 0;
     background-color: rgba(33, 33, 33, 0.75);
-    border-top-left-radius: 4;
-    border-bottom-left-radius: 4;
-    border-top-right-radius: 4;
-    border-bottom-right-radius: 4;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     min-width: 80px;
     margin-left: 0;
     margin-right: 0;
