--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -33,6 +33,10 @@ BehaviorTreeDecoratorView {
 
 .decorator .title#title-label {
     flex-grow: 1;
+    margin-left: 4px;
+    margin-right: 0;
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
 
 .disable_DecoratorMarker .decorator .markerContainer {
@@ -195,4 +199,43 @@ BehaviorTreeDecoratorView {
     position: absolute;
     top: -3px;
     right: -8px;
+}
+
+#decoratorBody .decoratorDetailContainer {
+    display: none;
+    flex-grow: 1;
+}
+
+#decoratorBody .decoratorDetailContainer.displayDetail {
+    display: flex;
+}
+
+.zoomOut #decoratorBody .decoratorDetailContainer {
+    display: none;
+}
+
+#decoratorBody .decoratorDetailContainer .decoratorDetail {
+    width: 110px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    font-size: 9px;
+    white-space: normal;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    margin-left: 8px;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 2px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    background-color: rgba(26, 26, 26, 0.5);
+    max-height: 22px;
 }
