Abort时显示不同的图标

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDebug.uss
@@ -10,6 +10,10 @@
     background-image: resource('d_p4_deletedlocal@2x');
 }
 
+.isAbort.failed.node.behaviorTreeNode #runningState {
+    background-image: resource('d_p4_deletedremote@2x');
+}
+
 .failed.edge #注释 {
     --edge-color: rgb(146, 133, 133);
     --edge-colorMode: defaultColor;
