--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -220,7 +220,7 @@
     border-right-color: rgb(200, 48, 181);
     border-top-color: rgb(200, 48, 181);
     border-bottom-color: rgb(200, 48, 181);
-    background-image: url('project://database/Packages/com.unity.settings-manager/Content/Options.png?fileID=2800000&guid=9eff477e4332346818c96745043dae9e&type=3#Options');
+    background-image: resource('sv_icon_dot8_pix16_gizmo');
 }
 
 #center #titleBar > #title {
