增加装饰器detail开关

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -214,6 +214,10 @@ BehaviorTreeDecoratorView {
     display: none;
 }
 
+.disable_DecoratorDetail #decoratorBody .decoratorDetailContainer {
+    display: none;
+}
+
 #decoratorBody .decoratorDetailContainer .decoratorDetail {
     width: 110px;
     flex-grow: 1;
